--- a/display.html
+++ b/display.html
@@ -6,6 +6,13 @@ div {background:blue}
 </style>
 <title>良记录</title>
 <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+<script>
+  var get_url=window.location.href;
+  $("div#daily").append(get_url);
+  var issues_api_url="https://api.github.com/repos/hellooozhangwen/hellooozhangwen.github.io/issues/"+get_url.split("?")[1].aplit("=")[1];
+  $("div#daily").append(issues_api_url);
+  
+</script>
 </head>
 
 <body>
