--- a/display.html
+++ b/display.html
@@ -9,7 +9,7 @@ div {background:blue}
 <script>
   var get_url=window.location.href;
   $("div#daily").append(get_url);
-  var issues_api_url="https://api.github.com/repos/hellooozhangwen/hellooozhangwen.github.io/issues/"+get_url.split("?")[1].aplit("=")[1];
+  var issues_api_url="https://api.github.com/repos/hellooozhangwen/hellooozhangwen.github.io/issues/"+get_url.split("?")[1].split("=")[1];
   $("div#daily").append(issues_api_url);
   
 </script>
