--- a/display.html
+++ b/display.html
@@ -2,21 +2,40 @@
 
 <head>
 <style>
-div {background:blue}
+div {background:rgb(0,150,255)}
 </style>
 <title>良记录</title>
 <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
 <script>
+
 function get_url(){
+  //获取当前url地址
   var url=window.location.href;
   $("div#daily").append(url);
-  var issues_api_url="https://api.github.com/repos/hellooozhangwen/hellooozhangwen.github.io/issues/"+url.split("?")[1].split("=")[1];
-  $("div#daily").append(issues_api_url);
+  //判断传过来的参数是否为空
+  if(url.split("?")[1].split("=")[1].length){
+      //拼接出issues的api地址
+       var issues_api_url="https://api.github.com/repos/hellooozhangwen/hellooozhangwen.github.io/issues/"+url.split("?")[1].split("=")[1];
+       $("div#daily").append(issues_api_url);
+       get_issues(issues_api_url);
+  }else{
+       $("div#daily").append("什么也没有");
+  }
+}
+
+//获取api数据
+function get_issues(www){
+    $.get(www,function(data){
+       console.log(data[0]["title"]);
+       console.log(data[0]["body"]);
+       console.log(data[0]["comments"]);
+    })
 }
 
 $(function(){
    get_url();
 })
+
 </script>
 </head>
 
