--- a/display.html
+++ b/display.html
@@ -2,7 +2,7 @@
 
 <head>
 <style>
-div {background:rgb(0,150,255)}
+div {background:rgb(0,150,255);font-size:200%;align:center}
 </style>
 <title>良记录</title>
 <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
