--- a/display.html
+++ b/display.html
@@ -11,12 +11,12 @@ div {background:rgb(0,150,255);font-size:200%;align:center}
 function get_url(){
   //获取当前url地址
   var url=window.location.href;
-  $("div#daily").append(url+"<br/>");
+ // $("div#daily").append(url+"<br/>");
   //判断传过来的参数是否为空
   if(url.split("?")[1].split("=")[1].length){
       //拼接出issues的api地址
        var issues_api_url="https://api.github.com/repos/hellooozhangwen/hellooozhangwen.github.io/issues/"+url.split("?")[1].split("=")[1];
-       $("div#daily").append(issues_api_url);
+     //  $("div#daily").append(issues_api_url);
        get_issues(issues_api_url);
   }else{
        $("div#daily").append("什么也没有");
