--- a/display.html
+++ b/display.html
@@ -35,7 +35,7 @@ function get_issues(www){
        console.log(data["comments"]);
        $("div#daily").append("<hr/>"+data["comments"]+"<hr/>")
        //获取留言地址为https://api.github.com/repos/hellooozhangwen/hellooozhangwen.github.io/issues/1/comments
-       if(data["comments"].length){
+       if(data["comments"] > 0){
               get_issues(www+"comments");
        }
     })
