--- a/display.html
+++ b/display.html
@@ -33,11 +33,11 @@ function get_issues(www){
        console.log(data["body"]);
        data["body"].length?$("div#daily").append(data["body"]):console.log("内容获取没有数据");
        console.log(data["comments"]);
-       $("div#daily").append("<hr/>"+data["comments"]+"<hr/>")
+       $("div#daily").append("<hr/>"+data["comments"]+typeof(data["comments"])+"<hr/>")
        //获取留言地址为https://api.github.com/repos/hellooozhangwen/hellooozhangwen.github.io/issues/1/comments
-       if(data["comments"] > 0){
-              get_issues(www+"comments");
-       }
+     //  if(data["comments"] > 0){
+      //        get_issues(www+"comments");
+      // }
     })
 }
 
