--- a/display.html
+++ b/display.html
@@ -36,10 +36,15 @@ function get_issues(www){
        $("div#daily").append("<hr/>"+data["comments"]+typeof(data["comments"])+"<hr/>")
        //获取留言地址为https://api.github.com/repos/hellooozhangwen/hellooozhangwen.github.io/issues/1/comments
        if(data["comments"] == "number"  &&  data["comments"] > 0){
-              data["title"]="";
-              data["body"]="";
-              data["comments"]="";
-              get_issues(www+"comments");
+              $.get(www+"comments",function(msg){
+                console.log(msg.length);
+                console.log(msg[0]["title"]);
+                //data["title"].length?$("title").eq(0).html(data["title"]):console.log("标题获取没有数据");
+                console.log(msg[0]["body"]);
+               // data["body"].length?$("div#daily").append(data["body"]):console.log("内容获取没有数据");
+                console.log(msg[0]["comments"]);
+               //$("div#daily").append("<hr/>"+data["comments"]+typeof(data["comments"])+"<hr/>")
+              });
        }
     })
 }
