--- a/display.html
+++ b/display.html
@@ -36,6 +36,7 @@ function get_issues(www){
        $("div#daily").append("<hr/>"+data["comments"]+typeof(data["comments"])+"<hr/>")
        //获取留言地址为https://api.github.com/repos/hellooozhangwen/hellooozhangwen.github.io/issues/1/comments
        if(data["comments"] == "number"  &&  data["comments"] > 0){
+              console.log(www+"comments");
               $.get(www+"comments",function(msg){
                 for(i in msg)console.log(i+"------"+msg[i]);
                 /*
