--- a/display.html
+++ b/display.html
@@ -37,7 +37,7 @@ function get_issues(www){
        //获取留言地址为https://api.github.com/repos/hellooozhangwen/hellooozhangwen.github.io/issues/1/comments
        if(data["comments"] == "number"  &&  data["comments"] > 0){
               console.log(www+"comments");
-              $.get(www+"comments",function(msg){
+              $.get(www+"/comments",function(msg){
                 for(i in msg)$("div#daily").append(i+"------"+msg[i]+"<br/>");
                 /*
                 console.log(msg.length);
