--- a/display.html
+++ b/display.html
@@ -33,12 +33,13 @@ function get_issues(www){
        console.log(data["body"]);
        data["body"].length?$("div#daily").append(data["body"]):console.log("内容获取没有数据");
        console.log(data["comments"]);
-       $("div#daily").append("<hr/>"+data["comments"]+typeof(data["comments"])+"<hr/>")
-       console.log(data["comments_url"]+"*******");
+       $("div#daily").append("<hr/>"+data["comments"]+typeof(data["comments"])+"<hr/>");
+       var comment=data["comments_url"];
+       console.log(comment+"*******");
        //获取留言地址为https://api.github.com/repos/hellooozhangwen/hellooozhangwen.github.io/issues/1/comments
        if(data["comments"] == "number"  &&  data["comments"] > 0){
-              console.log(data["comments_url"]);
-              $.get(data["comments_url"],function(msg){
+              console.log(comment);
+              $.get(comment,function(msg){
                 for(i in msg)$("div#daily").append(i+"------"+msg[i]+"<br/>");
                 /*
                 console.log(msg.length);
