--- a/display.html
+++ b/display.html
@@ -35,9 +35,10 @@ function get_issues(www){
        console.log(data["comments"]);
        $("div#daily").append("<hr/>"+data["comments"]+typeof(data["comments"])+"<hr/>");
        var comment=data["comments_url"];
+       var count=data["comments"];
        console.log(comment+"*******");
        //获取留言地址为https://api.github.com/repos/hellooozhangwen/hellooozhangwen.github.io/issues/1/comments
-       if(data["comments"] == "number"  &&  data["comments"] > 0){
+       if(count == "number"  &&  count > 0){
               console.log(comment);
               $.get(comment,function(msg){
                 for(i in msg)$("div#daily").append(i+"------"+msg[i]+"<br/>");
