--- a/display.html
+++ b/display.html
@@ -34,14 +34,14 @@ function get_issues(www){
        data["body"].length?$("div#daily").append(data["body"]):console.log("内容获取没有数据");
        console.log(data["comments"]);
        $("div#daily").append("<hr/>"+data["comments"]+typeof(data["comments"])+"<hr/>");
-       var comment=data["comments_url"];
+       var comment_url=data["comments_url"];
        var count=data["comments"];
        console.log(comment+"*******");
        //获取留言地址为https://api.github.com/repos/hellooozhangwen/hellooozhangwen.github.io/issues/1/comments
        if(count == "number"  &&  count > 0){
-              console.log(comment);
-              $.get(comment,function(msg){
-                for(i in msg)$("div#daily").append(i+"------"+msg[i]+"<br/>");
+              console.log(comment_url);
+              $.get(comment_url,function(msg){
+                for(i in msg)$("div").append(i+"------"+msg[i]+"<br/>");
                 /*
                 console.log(msg.length);
                 console.log(msg);
