--- a/display.html
+++ b/display.html
@@ -36,12 +36,12 @@ function get_issues(www){
        $("div#daily").append("<hr/>"+data["comments"]+typeof(data["comments"])+"<hr/>");
        var comment_url=data["comments_url"];
        var count=data["comments"];
-       console.log(comment+"*******");
+       console.log(comment_url+"*******");
        //获取留言地址为https://api.github.com/repos/hellooozhangwen/hellooozhangwen.github.io/issues/1/comments
        if(count == "number"  &&  count > 0){
               console.log(comment_url);
               $.get(comment_url,function(msg){
-                for(i in msg)$("div").append(i+"------"+msg[i]+"<br/>");
+                for(i in msg){$("div").append(i+"------"+msg[i]+"<br/>")};
                 /*
                 console.log(msg.length);
                 console.log(msg);
