--- a/display.html
+++ b/display.html
@@ -38,7 +38,7 @@ function get_issues(www){
        var count=data["comments"];
        console.log(comment_url+"*******");
        //获取留言地址为https://api.github.com/repos/hellooozhangwen/hellooozhangwen.github.io/issues/1/comments
-       if(count == "number"  &&  count > 0){
+       if(count > 0){
               console.log(comment_url);
               $.get(comment_url,function(msg){
                 for(i in msg){$("div").append(i+"------"+msg[i]+"<br/>")};
