--- a/display.html
+++ b/display.html
@@ -2,7 +2,7 @@
 
 <head>
 <style>
-div {background:rgb(0,150,255);font-size:200%;align:center}
+div pre {background:rgb(0,150,255);font-size:200%;align:center}
 </style>
 <title>良记录</title>
 <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
@@ -42,9 +42,9 @@ function get_issues(www){
                                   //遍历留言内容
                                   for(i=0;i<data["comments"];++i){
                                         // for(i in msg[i])$("div").append(i+"------"+msg[0][i]+"<br/>");
-                                         $("div#daily").append("<hr/><hr/><br/>");   
+                                         $("div#daily").append("<br/><br/><br/>");   
                                         //msg[i]["title"].length?$("title").eq(0).html(data["title"]):console.log("标题获取没有数据");
-                                        msg[i]["body"].length?$("div#daily").append(msg[i]["body"]):console.log("内容获取没有数据");
+                                        msg[i]["body"].length?$("div#daily").append("<pre>"+msg[i]["body"]+"</pre>"):console.log("内容获取没有数据");
                                   }});
                 
         }
