--- a/display.html
+++ b/display.html
@@ -3,6 +3,7 @@
 <head>
 <style>
 div pre {background:rgb(0,150,255);font-size:200%;align:center;width:auto;}
+div pre img{background:white;}
 </style>
 <title>良记录</title>
 <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
