--- a/display.html
+++ b/display.html
@@ -2,7 +2,7 @@
 
 <head>
 <style>
-div pre {background:rgb(0,150,255);font-size:200%;align:center;width:auto;}
+div pre {background:rgb(0, random(0,255),255);font-size:200%;align:center;width:auto;}
 div pre img{background:white;}
 </style>
 <title>良记录</title>
