--- a/display.html
+++ b/display.html
@@ -56,8 +56,8 @@ function get_issues(www){
     $("div pre").each(function(){
        var r=parseInt(Math.random()*255);
        var g=parseInt(Math.random()*255);
-       var color="rgb("+r+","+g+",255)";
-       $(this).css("background",color);
+       var color="background:rgb("+r+","+g+",255)";
+       $(this).css(color);
       })
   }
 
