--- a/display.html
+++ b/display.html
@@ -65,7 +65,7 @@ function get_issues(www){
 
 $(function(){
    get_url();
-   random_color();
+   setTimeout("random_color()",30000);
 })
 
 </script>
