--- a/display.html
+++ b/display.html
@@ -65,14 +65,14 @@ function get_issues(www){
 
 $(function(){
    get_url();
-   setTimeout("random_color()",5000);
+   //setTimeout("random_color()",5000);
 })
 
 </script>
 </head>
 
 <body>
-<div id="daily">
+<div id="daily" onload="random_color()" >
 </div>
 </body>
 
