--- a/display.html
+++ b/display.html
@@ -2,6 +2,7 @@
 
 <head>
 <style>
+div {position:fixed;top:0;left:30%;width:40%;heigth:100%}
 div pre {font-size:200%;align:center;width:auto;}
 
 </style>
