--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
         function show(msg){
                 //  if(!$("#show").length) {
                 msg="<h1 style='color: #0000cc;text-align: center;position: absolute;top: 45%;left: 30%' >"+msg+"</h1>";
-                var tag = '<div id=show style="height: 100%;width: 100%;text-align: center;background-color: orangered;position: fixed;top: 0%;left: 0%;display: none;opacity: .7 " >' + msg + "</div>";
+                var tag = '<div id=show style="height: 100%;width: 100%;text-align: center;background-color: orangered;position: fixed;top: 0%;left: 0%;display: none;opacity: .7;z-index:999" >' + msg + "</div>";
                 $('body').append(tag);
                 // }
                $("#show").toggle();  //显示id为show的标签内容
