--- a/display.html
+++ b/display.html
@@ -3,7 +3,7 @@
 <head>
 <style>
 div {position:fixed;top:0;left:30%;width:40%;heigth:100%}
-div pre {font-size:200%;align:center;width:auto;text-overflow: ellipsis}
+div pre {font-size:200%;align:center;width:auto;word-wrap:break-word}
 
 </style>
 <title>良记录</title>
