--- a/display.html
+++ b/display.html
@@ -2,8 +2,8 @@
 
 <head>
 <style>
-div {position:fixed;top:0;left:20%;width:60%;heigth:100%}
-div pre {font-size:200%;align:center;width:auto;word-wrap:break-word}
+div {position:fixed;top:0;left:20%;width:60%;heigth:100%;word-wrap: break-word}
+div pre {font-size:200%;align:center;width:auto}
 
 </style>
 <title>良记录</title>
