--- a/display.html
+++ b/display.html
@@ -2,7 +2,7 @@
 
 <head>
 <style>
-div {position:absolute;top:0;left:20%;width:60%;heigth:100%;word-wrap: break-word}
+div {position:absolute;top:0;left:20%;width:60%;heigth:100%;word-wrap: break-word;word-break:break-all;}
 div pre {font-size:200%;align:center;width:auto}
 
 </style>
