--- a/display.html
+++ b/display.html
@@ -2,8 +2,9 @@
 
 <head>
 <style>
-div {position:absolute;top:0;left:20%;width:60%;heigth:100%;word-wrap: break-word;word-break:break-all;}
-div pre {font-size:200%;align:center;width:auto}
+div#css {position:absolute;top:0;left:0;width:20%;height:100%}
+div#daily {position:absolute;top:0;left:20%;width:60%;height:100%;word-wrap: break-word;word-break:break-all;}
+div#daily pre {font-size:200%;align:center;width:auto}
 
 </style>
 <title>良记录</title>
@@ -74,8 +75,8 @@ $(function(){
 </head>
 
 <body>
-<div id="daily"  >
-</div>
+<div id=css >我产css</div>  
+<div id="daily"  ></div>
 </body>
 
 </html>
