--- a/display.html
+++ b/display.html
@@ -80,7 +80,7 @@ $(function(){
             var r=parseInt(Math.random()*255);
             var g=parseInt(Math.random()*255);
             var b=parseInt(Math.random()*255);
-            var pos_width=parseInt(Math.random()*90)+"%";
+            var pos_width=parseInt(Math.random()*20)+"%";
             var pos_heigth=parseInt(Math.random()*90)+"%";
           //  width: 100px;height: 100px;background: orange;border-radius: 100px;
             $("body div#css"+i).css("border-radius","100px");
@@ -110,7 +110,7 @@ $(function(){
 </head>
 
 <body>
-<div id=css >我产css</div>  
+<div id=css >下雨</div>  
 <div id="daily"  ></div>
 </body>
 
