--- a/display.html
+++ b/display.html
@@ -2,7 +2,7 @@
 
 <head>
 <style>
-div#css {position:absolute;top:0;left:0;width:20%;height:100%}
+div#line {position:absolute;top:0;left:0;width:20%;height:100%}
 div#daily {position:absolute;top:0;left:20%;width:60%;height:100%;word-wrap: break-word;word-break:break-all;}
 div#daily pre {font-size:200%;align:center;width:auto}
 
@@ -69,7 +69,7 @@ function get_issues(www){
 $(function(){
   get_url();
    //setTimeout("random_color()",5000);
-  add_div_for_body(555);
+  add_div_for_body(255);
   setInterval(play_for_css,300);
 })
 
@@ -83,8 +83,8 @@ $(function(){
             var pos_width=parseInt(Math.random()*90)+"%";
             var pos_heigth=parseInt(Math.random()*20)+"%";
           //  width: 100px;height: 100px;background: orange;border-radius: 100px;
-            $("body div#css"+i).css("border-radius","100px");
-            $("body div#css"+i).css("width","1px");
+            $("body div#css"+i).css("border-radius","10px");
+            $("body div#css"+i).css("width","100px");
             $("body div#css"+i).css("height","100px");
             $("body div#css"+i).css("background","rgb("+r+","+g+","+b+")");
             $("body div#css"+i).css("position","fixed");
