--- a/index.html
+++ b/index.html
@@ -222,11 +222,12 @@
 <div id="switch_jpg">
     <img  id="rock" style="width: 620px;height: 410px;" src="2012.jpg">
 </div>
-<div id="talk" style="display:none">
+<div id=menu ><span>menu</span> </div>
+<!--div id="talk" style="display:none">
     <p>say something to me</p>
     <input id="say"  type="text" style="width: 60%" placeholder="baby,say something to me" onkeypress="if(event.keyCode == 13){add_say()}" />
     <input type="button" onclick="read_mem()" value="加载留言" />
-</div>
+</div-->
 <!--div id="log" onload="read_mem()" ></div-->
 <div id="log" onload="" ></div>
 <iframe id="tit" src="some_log/1.html" style="width:70%;display:none" onload="get_iframe_title(this.id)"></iframe>
