--- a/display.html
+++ b/display.html
@@ -7,6 +7,7 @@ div#daily {position:absolute;top:0;left:20%;width:60%;height:100%;word-wrap: bre
 div#daily pre {font-size:200%;align:center;width:auto}
 
 </style>
+<link rel="fluid-icon" href="https://github.com/fluidicon.png" title="GitHub">
 <title>良记录</title>
 <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
 <script>
