--- a/display.html
+++ b/display.html
@@ -1,13 +1,13 @@
 <html>
 
 <head>
+<link rel="icon" type="image/x-icon" href="https://assets-cdn.github.com/favicon.ico">
 <style>
 div#line {position:absolute;top:0;left:0;width:20%;height:100%}
 div#daily {position:absolute;top:0;left:20%;width:60%;height:100%;word-wrap: break-word;word-break:break-all;}
 div#daily pre {font-size:200%;align:center;width:auto}
 
 </style>
-<link rel="fluid-icon" href="https://github.com/fluidicon.png" title="GitHub">
 <title>良记录</title>
 <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
 <script>
