--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-
+   <link rel="icon" type="image/x-icon" href="https://assets-cdn.github.com/favicon.ico">
     <title>万恶之地</title>
     <style>
        body{position:absolute;top:0;left:20%;}
