--- a/index.html
+++ b/index.html
@@ -235,16 +235,16 @@
     <input type="button" onclick="read_mem()" value="加载留言" />
 </div-->
 <!--div id="log" onload="read_mem()" ></div-->
-<div id="log" onload="" ></div>
-<div id="issues" ></div>
+<div id="log" onload="" style="display:none" ></div>
+<div id="issues" style="display:none" ></div>
 <iframe id="tit" src="some_log/1.html" style="width:70%;display:none" onload="get_iframe_title(this.id)"></iframe>
 <iframe id="txt" src="some_log/see sea.txt" style="width:70%;display:none" onload="get_iframe_title(this.id)" ></iframe> 
 <!--iframe id="test" src="some_log/see sea.txt" style="width:70%;display:none"  ></iframe--> 
 
 
-<section id="comments">
+<section id="comments" >
    <!-- 多说评论框 start -->
-<div id="ds-thread" class="ds-thread" data-thread-key="index" data-title="hello zhangwen" data-url="https://hellooozhangwen.github.io/index.html"></div>
+<div id="ds-thread" style="display:none"  class="ds-thread" data-thread-key="index" data-title="hello zhangwen" data-url="https://hellooozhangwen.github.io/index.html"></div>
 <!-- 多说评论框 end -->
 <!-- 多说公共JS代码 start (一个网页只需插入一次) -->
 <script type="text/javascript">
