--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
 
 <section id="comments" >
    <!-- 多说评论框 start -->
-<div id="ds-thread" style="display:none"  class="ds-thread" data-thread-key="index" data-title="hello zhangwen" data-url="https://hellooozhangwen.github.io/index.html"></div>
+<div id="ds-thread"  class="ds-thread" data-thread-key="index" data-title="hello zhangwen" data-url="https://hellooozhangwen.github.io/index.html"></div>
 <!-- 多说评论框 end -->
 <!-- 多说公共JS代码 start (一个网页只需插入一次) -->
 <script type="text/javascript">
