--- a/some_log/163mp3.html
+++ b/some_log/163mp3.html
@@ -1,5 +1,4 @@
-<iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=330 height=86 src="
-http://music.163.com/outchain/player?type=2&id=32102411&auto=1&height=66"></iframe>
+<iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width=330 height=86 src="//music.163.com/outchain/player?type=2&id=32102411&auto=1&height=66"></iframe>
 
 <pre>http://music.163.com/#/song?id=229413</pre>
 这个地址是原地址，顶端iframe里的src地址只是对应修改了id值。
