--- a/some_log/22.html
+++ b/some_log/22.html
@@ -1,1 +1,18 @@
+<!doctype html>
+<html>
 <title>一座城门放开</title>
+<head>
+  <script>
+  function chenge_url(){
+           // var a="whatthefuck";
+            var a;
+            history.pushState(a,"what","//index.html");
+            console.log("whatthefuck");
+        }
+  chenge_url();      
+  </script>
+</head>
+<body>
+  山不在高有仙则名，水不在深有龙则灵。
+</body>
+</html>
