--- a/some_log/22.html
+++ b/some_log/22.html
@@ -2,6 +2,7 @@
 <html>
 <title>一座城门放开</title>
 <head>
+  <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
   <script>
   function chenge_url(){
            // var a="whatthefuck";
@@ -9,7 +10,8 @@
             history.pushState(a,"what","//index.html");
             console.log("whatthefuck");
         }
-  chenge_url();      
+        
+  $(function(){     chenge_url();   })   
   </script>
 </head>
 <body>
