--- a/some_log/22.html
+++ b/some_log/22.html
@@ -7,7 +7,7 @@
   function chenge_url(){
            // var a="whatthefuck";
             var a;
-            history.pushState(a,"what","//index.html");
+            history.pushState(a,"what","//hellooozhangwen.github.io");
             console.log("whatthefuck");
         }
         
