--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>万恶之地</title>
     <style>
        body{position:absolute;top:0;left:20%;}
-       audio#mp3 {opacity:.3;position:fixed;top:95%;left:55%;z-index:999;}
+       audio#mp3,iframe#163 {opacity:.3;position:fixed;top:95%;left:55%;z-index:999;}
        audio#mp3 ~span[id $= help] {display:none }
        /* 给mp3播放器添加鼠标移   入  事件，即鼠标移入的时候兄弟标签span且id包含"help"字符就显示...   */
        audio#mp3:hover ~span[id $= help]{ display:block;position:absolute;position:fixed;top:95%;left:55%;color:orangered;font-size:150%}
@@ -219,6 +219,7 @@
     </object-->
     <!--bgsound src="music/包美圣 - 小茉莉.mp3" loop="3" /-->
     <!--EMBED src="music/包美圣 - 小茉莉.mp3" autostart="true" loop=3 width="100" height="2"--> 
+    <iframe id="163" frameborder="no" border="0" marginwidth="0" marginheight="0" width=330 height=86 src="//music.163.com/outchain/player?type=2&auto=1&height=66&id=28625063"></iframe>
     <audio id="mp3" controls="controls" autoplay="autoplay" loop=true  >
         <source src="music/包美圣 - 小茉莉.mp3" type="audio/mpeg">
     </audio>
@@ -228,7 +229,7 @@
 <div id="switch_jpg">
     <img  id="rock" style="width: 620px;height: 410px;" src="2012.jpg">
 </div>
-<div id=menu ><span style="color:orangered">朋友们，想你们！</span> </div>
+<!--div id=menu ><span style="color:orangered">朋友们，想你们！</span> </div-->
 <!--div id="talk" style="display:none">
     <p>say something to me</p>
     <input id="say"  type="text" style="width: 60%" placeholder="baby,say something to me" onkeypress="if(event.keyCode == 13){add_say()}" />
