--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <title>万恶之地</title>
     <style>
        body{position:absolute;top:0;left:20%;}
-       audio#mp3,iframe#163 {opacity:.3;position:fixed;top:95%;left:55%;z-index:999;}
+       iframe#163 {opacity:.3;position:fixed;top:95%;left:55%;z-index:999;}
+       audio#mp3 {opacity:.3;position:fixed;top:95%;left:55%;z-index:999;}
        audio#mp3 ~span[id $= help] {display:none }
        /* 给mp3播放器添加鼠标移   入  事件，即鼠标移入的时候兄弟标签span且id包含"help"字符就显示...   */
        audio#mp3:hover ~span[id $= help]{ display:block;position:absolute;position:fixed;top:95%;left:55%;color:orangered;font-size:150%}
