--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
 <div id="switch_jpg">
     <img  id="rock" style="width: 620px;height: 410px;" src="2012.jpg">
 </div>
-<!--div id=menu ><span style="color:orangered">朋友们，想你们！</span> </div-->
+<div id=menu ><!--span style="color:orangered">朋友们，想你们！</span--> </div>
 <!--div id="talk" style="display:none">
     <p>say something to me</p>
     <input id="say"  type="text" style="width: 60%" placeholder="baby,say something to me" onkeypress="if(event.keyCode == 13){add_say()}" />
