--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>万恶之地</title>
     <style>
        body{position:absolute;top:0;left:20%;}
-       iframe#music163 {opacity:.3;position:fixed;top:95%;left:55%;z-index:999;}
+       iframe#music163 {opacity:.3;position:fixed;top:90%;left:55%;z-index:999;}
        audio#mp3 {opacity:.3;position:fixed;top:95%;left:55%;z-index:999;}
        audio#mp3 ~span[id $= help] {display:none }
        /* 给mp3播放器添加鼠标移   入  事件，即鼠标移入的时候兄弟标签span且id包含"help"字符就显示...   */
@@ -221,10 +221,10 @@
     <!--bgsound src="music/包美圣 - 小茉莉.mp3" loop="3" /-->
     <!--EMBED src="music/包美圣 - 小茉莉.mp3" autostart="true" loop=3 width="100" height="2"--> 
    
-    <audio id="mp3" controls="controls" autoplay="autoplay" loop=true  >
+    <!--audio id="mp3" controls="controls" autoplay="autoplay" loop=true  >
         <source src="music/包美圣 - 小茉莉.mp3" type="audio/mpeg">
     </audio>
-    <span id="mp3_help" >可以用ESC键控制</span>
+    <span id="mp3_help" >可以用ESC键控制</span-->
     
 <h1 style="text-align: center;color: orangered;display:none" >保持冷静，不断向前</h1>
 <div id="switch_jpg">
