--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <style>
        body{position:absolute;top:0;left:20%;}
        iframe#music163 {opacity:.5;position:fixed;top:90%;left:20%;z-index:999;}
+       iframe#music163:hover::after{content:attr(data-help);display:block;border:2px solid red;border-radius:0px;text-align:center;line-height:100px; }
        audio#mp3 {opacity:.3;position:fixed;top:95%;left:55%;z-index:999;}
        audio#mp3 ~span[id $= help] {display:none }
        /* 给mp3播放器添加鼠标移   入  事件，即鼠标移入的时候兄弟标签span且id包含"help"字符就显示...   */
@@ -177,6 +178,9 @@
                 switch(event.keyCode) {
                     case 27:
                    // 这里是按了"ESC"后隐藏或显示mp3播放器
+                   $("iframe#music163").toggle();
+                   /*
+                   //自带播放器的暂停与播放功能
                    $("audio#mp3").eq(0).toggle(); //css("display","none"); 
                    if(play){
                    	//暂停音乐，并跳出提醒
@@ -187,6 +191,7 @@
                         $("audio#mp3")[0].play();
                         show("可以用ESC键隐藏音乐");
                     }
+                    */
                     //取反
                     play=!play;
                     break;
@@ -243,7 +248,7 @@
 <iframe id="txt" src="some_log/see sea.txt" style="width:70%;display:none" onload="get_iframe_title(this.id)" ></iframe> 
 <!--iframe id="test" src="some_log/see sea.txt" style="width:70%;display:none"  > 28625063</iframe--> 
 
- <iframe id="music163" frameborder="no" border="0" marginwidth="0" marginheight="0" width=630 height=86 src="//music.163.com/outchain/player?type=2&auto=1&height=66&id=32102411"></iframe>
+ <iframe id="music163" data-help="可以用ESC键控制" frameborder="no" border="0" marginwidth="0" marginheight="0" width=630 height=86 src="//music.163.com/outchain/player?type=2&auto=1&height=66&id=32102411"></iframe>
 
 <section id="comments" >
    <!-- 多说评论框 start -->
