--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <style>
        body{position:absolute;top:0;left:20%;}
        iframe#music163 {opacity:.5;position:fixed;top:90%;left:20%;z-index:999;}
-       div#menu:hover::after{content:attr(data-help);display:block;font-size:200%;border:2px solid red;border-radius:0px;text-align:center;line-height:100px; }
+       iframe#music163:hover::after{content:attr(data-help);display:block;font-size:200%;border:10px solid red;border-radius:0px;text-align:center;line-height:100px; }
        audio#mp3 {opacity:.3;position:fixed;top:95%;left:55%;z-index:999;}
        audio#mp3 ~span[id $= help] {display:none }
        /* 给mp3播放器添加鼠标移   入  事件，即鼠标移入的时候兄弟标签span且id包含"help"字符就显示...   */
@@ -180,6 +180,7 @@
                     case 27:
                    // 这里是按了"ESC"后隐藏或显示mp3播放器
                    $("iframe#music163").toggle();
+                   show($("iframe#music163").attr("data-help"));
                    /*
                    //自带播放器的暂停与播放功能
                    $("audio#mp3").eq(0).toggle(); //css("display","none"); 
