--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                     case 27:
                    // 这里是按了"ESC"后隐藏或显示mp3播放器
                    $("iframe#music163").toggle();
-                   show($("iframe#music163").prop("data-help"));
+                   show($("iframe#music163").attr("data-help"));
                   /*
                    //自带播放器的暂停与播放功能
                    $("audio#mp3").eq(0).toggle(); //css("display","none"); 
