--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
     <script src="act_for_css.js"></script>
     <script src="link_url.js"></script>
+    <script src="read_somelog.js"> </script>
     <script>
         //设置show_jpg对象的变量，我称之为静态变量
         show_jpg.i=-1;
