--- a/some_log/22.html
+++ b/some_log/22.html
@@ -15,7 +15,7 @@
   </script>
 </head>
 <body>
-  <img src='/2012.jpg' >
+  <img src='/2012.jpg' style='width:10%;heigth:20%'>
   山不在高有仙则名，水不在深有龙则灵。
 </body>
 </html>
