--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
 <div id="switch_jpg">
     <img  id="rock" style="width: 620px;height: 410px;" src="2012.jpg">
 </div>
-<div id=menu ><!--span style="color:orangered">朋友们，想你们！</span--> </div>
+<div id=menu > </div>
 <!--div id="talk" style="display:none">
     <p>say something to me</p>
     <input id="say"  type="text" style="width: 60%" placeholder="baby,say something to me" onkeypress="if(event.keyCode == 13){add_say()}" />
@@ -262,7 +262,7 @@
 <!--
 <iframe id="tit" src="some_log/1.html" style="width:70%;display:none" onload="get_iframe_title(this.id)"></iframe>
 <iframe id="txt" src="some_log/see sea.txt" style="width:70%;display:none" onload="get_iframe_title(this.id)" ></iframe> 
-<!--iframe id="test" src="some_log/see sea.txt" style="width:70%;display:none"  > 28625063</iframe--> 
+<iframe id="test" src="some_log/see sea.txt" style="width:70%;display:none"  > 28625063</iframe> 
 -->
 
  <iframe id="music163" data-help="可以用ESC键控制" frameborder="no" border="0" marginwidth="0" marginheight="0" width=630 height=86 src="//music.163.com/outchain/player?type=2&auto=1&height=66&id=401281113"></iframe>
