--- a/index.html
+++ b/index.html
@@ -13,6 +13,16 @@
        audio#mp3:hover ~span[id $= help]{ display:block;position:absolute;position:fixed;top:95%;left:55%;color:orangered;font-size:150%}
        /*div#log a,div#log a p {background: linear-gradient(to right,#ffffff,blue);width:20%; }*/
        div#log a,div#log a p {width:20%; }
+       div#log a img:hover::after{
+       	  content:attr(data-title);
+       	  font-size:50%;
+       	  display:block;
+       	  color:skyblue;
+       	  border:1px solid black;
+       	  border-radius:0px;
+       	  text-align:center;
+       	  line-height:100px;
+       }
     </style>
     <script  src="https://libs.baidu.com/jquery/1.10.2/jquery.min.js"></script>
     <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
