--- a/some_log/1.html
+++ b/some_log/1.html
@@ -7,7 +7,7 @@
   <title>是谁来自五湖四海，却囿于昼夜，厨房与爱</title>
 </head>
 <body>
-	<img src="//7xkszy.com2.z0.glb.qiniucdn.com/pics/vol/5589a48605e15.jpg?imageView2/1/w/640/h/452" style="width:13%;height:20%">
+	<img src="//7xkszy.com2.z0.glb.qiniucdn.com/pics/vol/5589a48605e15.jpg?imageView2/1/w/640/h/452" >
 <pre>
 <h6 style="color:red">
 今天开始着手开始试着搞搞这个，说实在的还是一件特别有意思的事情。
