--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
        /*div#log a,div#log a p {background: linear-gradient(to right,#ffffff,blue);width:20%; }*/
        div#log a,div#log a p {width:20%; }
        div#log a:hover img{
+       	    width:50%;
+       	    height:50%;
+       	/*
        	  content:attr(data-title);
        	  font-size:50%;
        	  display:block;
@@ -22,6 +25,7 @@
        	  border-radius:0px;
        	  text-align:center;
        	  line-height:100px;
+       	  */
        }
     </style>
     <script  src="https://libs.baidu.com/jquery/1.10.2/jquery.min.js"></script>
