--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
        audio#mp3:hover ~span[id $= help]{ display:block;position:absolute;position:fixed;top:95%;left:55%;color:orangered;font-size:150%}
        /*div#log a,div#log a p {background: linear-gradient(to right,#ffffff,blue);width:20%; }*/
        div#log a,div#log a p {width:20%; }
-       div#log a:hover img{
-       	    width:50%;
-       	    height:50%;
+       div#log a img:hover {
+       	    width:5%;
+       	    height:5%;
        	/*
        	  content:attr(data-title);
        	  font-size:50%;
