--- a/index.html
+++ b/index.html
@@ -13,18 +13,20 @@
        audio#mp3:hover ~span[id $= help]{ display:block;position:absolute;position:fixed;top:95%;left:55%;color:orangered;font-size:150%}
        /*div#log a,div#log a p {background: linear-gradient(to right,#ffffff,blue);width:20%; }*/
        div#log a,div#log a p {width:20%; }
-       div#log a img:hover:after {
-       	    width:5%;
+       div#log a:hover:after {
+       	    width:50%;
        	    height:5%;
        	
        	  content:attr(data-title);
        	  font-size:500%;
        	  display:block;
        	  color:skyblue;
+       	   	  /*
        	  border:10px solid black;
        	  border-radius:100px;
+       	  */
        	  text-align:center;
-       	  line-height:200px;
+       	  line-height:20px;
        	  
        }
     </style>
