--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
        	    width:50%;
        	    height:5%;
        	
-       	  content:attr(target);
+       	  content:attr(data-title);
        	  font-size:500%;
        	  display:block;
        	  color:skyblue;
