--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>万恶之地</title>
     <style>
        body{position:absolute;top:0;left:20%;}
-       iframe#music163 {opacity:.5;position:fixed;top:90%;left:20%;z-index:999;}
+       iframe#music163 {opacity:.5;position:fixed;top:90%;left:20%;z-index:999;display:none; }
        iframe#music163:hover::after{content:attr(data-help);display:block;font-size:200%;border:10px solid red;border-radius:0px;text-align:center;line-height:100px; }
        audio#mp3 {opacity:.3;position:fixed;top:95%;left:55%;z-index:999;}
        audio#mp3 ~span[id $= help] {display:none }
