--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
        /*div#log a,div#log a p {background: linear-gradient(to right,#ffffff,blue);width:20%; }*/
        div#log a,div#log a p {width:20%; }
        div#log div a:hover::after {
-       	  position:absolute;
+       	  position:relative;
        	  top:50%;
        	  left:20%;
        	  content:attr(data-title);
