--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
        /*div#log a,div#log a p {background: linear-gradient(to right,#ffffff,blue);width:20%; }*/
        div#log a,div#log a p {width:20%; }
        div#log div{position:relative;}
+       div#log div a img:hover {
+                   position: relative;
+                   transform: rotate(186deg);
+       }
        div#log div a:hover::after {
              position:absolute;
        	     top:45%;
